2-environments/0-live-production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maliev
  labels:
    environment: production
    managed-by: argocd
