2-environments/0-live-production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gce-ingress-maliev
  namespace: maliev
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: maliev-www-ip
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - "*.maliev.com"
        - maliev.com
      secretName: maliev-com-wildcard-tls
  rules:
    - host: www.maliev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maliev-web
                port:
                  number: 8080
    - host: maliev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maliev-web
                port:
                  number: 8080
    - host: api.maliev.com
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: maliev-authservice-api
                port:
                  number: 8080
          - path: /countries
            pathType: Prefix
            backend:
              service:
                name: maliev-countryservice-api
                port:
                  number: 8080
          - path: /currencies
            pathType: Prefix
            backend:
              service:
                name: maliev-currencyservice-api
                port:
                  number: 8080
          - path: /customers
            pathType: Prefix
            backend:
              service:
                name: maliev-customerservice-api
                port:
                  number: 8080
          - path: /materials
            pathType: Prefix
            backend:
              service:
                name: maliev-materialservice-api
                port:
                  number: 8080
          - path: /suppliers
            pathType: Prefix
            backend:
              service:
                name: maliev-supplierservice-api
                port:
                  number: 8080
          - path: /orderstatuses
            pathType: Prefix
            backend:
              service:
                name: maliev-orderstatusservice-api
                port:
                  number: 8080
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: maliev-uploadservice-api
                port:
                  number: 8080
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: maliev-orderservice-api
              port:
                number: 8080
          - path: /emails
            pathType: Prefix
            backend:
              service:
                name: maliev-emailservice-api
              port:
                number: 8080
          - path: /quotations
            pathType: Prefix
            backend:
              service:
                name: maliev-quotationservice-api
              port:
                number: 8080
          - path: /employees
            pathType: Prefix
            backend:
              service:
                name: maliev-employeeservice-api
              port:
                number: 8080
          - path: /payments
            pathType: Prefix
            backend:
              service:
                name: maliev-paymentservice-api
              port:
                number: 8080
          - path: /pdfs
            pathType: Prefix
            backend:
              service:
                name: maliev-pdfservice-api
              port:
                number: 8080
          - path: /jobs
            pathType: Prefix
            backend:
              service:
                name: maliev-jobservice-api
              port:
                number: 8080
          - path: /invoices
            pathType: Prefix
            backend:
              service:
                name: maliev-invoiceservice-api
              port:
                number: 8080
          - path: /messages
            pathType: Prefix
            backend:
              service:
                name: maliev-messageservice-api
              port:
                number: 8080
          - path: /purchaseorders
            pathType: Prefix
            backend:
              service:
                name: maliev-purchaseorderservice-api
              port:
                number: 8080
          - path: /receipts
            pathType: Prefix
            backend:
              service:
                name: maliev-receiptservice-api
              port:
                number: 8080
          - path: /accounting
            pathType: Prefix
            backend:
              service:
                name: maliev-accountingservice-api
              port:
                number: 8080
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: maliev-notificationservice-api
              port:
                number: 8080
          - path: /predictions
            pathType: Prefix
            backend:
              service:
                name: maliev-predictionservice-api
              port:
                number: 8080
    - host: intranet.maliev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maliev-intranet
                port:
                  number: 8080
